--- a/src/app/bike-site-list/bikesite-list.component.scss
+++ b/src/app/bike-site-list/bikesite-list.component.scss
@@ -1,59 +1,9 @@
 
-.table--3cols {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 0 3em 0;
-  padding: 0;
-  font-size: 1.2em;
-}
+$break-small: 320px;
+$break-large: 1200px;
 
-.tcell {
-  box-sizing: border-box;
-  flex-grow: 1;
-  padding: 0.8em 1.2em;
-  width: 50%;
-  overflow: hidden; // or flex might break
-  list-style: none;
-  border: solid 3px white;
-  background: #efefef;
-  &.last-reported {
-    width: 25%;
+.header {
+  @media screen and (max-width: $break-small) {
+    display: none;
   }
-  &.status-num-bikes {
-    width: 25%;
-  }
-  &.status-num-docks-available {
-    width: 25%;
-  }
-  &.header {
-    font-weight: bold;
-    background: #b2f5fe;
-  }
-  &.available {
-    background: #c7f6c7;
-  }
-  &.none {
-    background: #ff878f;
-  }
-  &.limited {
-    background: #ffe4af;
-  }
-}
-
-/* Page styling
-================================== */
-html {
-  height: 100%;
-  background-color: #EEE;
-}
-body {
-  box-sizing: border-box;
-  min-height: 100%;
-  margin: 0 auto;
-  padding: 2em;
-  max-width: 800px;
-  font-size: 1.2em;
-  background-color: white;
-  border: double 3px #DDD;
-  border-top: none; border-bottom: none;
 }
